src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidMergeDiffTemplates/ValidExample3.liquid
{% mergeDiff msg -%}
{
  "id" : "1",
  "data" : "newData",
  "resourceType" : "newType",
  "extension" : "",
  "value[x]" : "",
}
{% endmergeDiff -%}